pure JS added radio options

--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -38,7 +38,7 @@ Add view
  
                  <!--Survey type-->
  
-                 <select name="type" class="form-select" aria-label="Default select example">
+                 <select name="type" class="form-select" aria-label="Default select example" id="selection">
                      <option selected>Type of Survey</option>
                      <option value="1">Multiple Choice</option>
                      <option value="2">Short Answer</option>
@@ -47,84 +47,18 @@ Add view
                  <br>
                  <br>
  
-                 <% let count = 1; %>
+                 
                  <!--Question 1-->
-                 <label for="question<%= count %> ">Question <%= count %></label>
-                 <div class="form-group" id="question<%= count %>">
-                     <div class="input-group" id="questionBox<%= count %>">
-                         <input type="text" aria-label="question<%= count %>" class="form-control">
+                 <label for="question1">Question 1</label>
+                 <div class="form-group" id="question1">
+                     <div class="input-group" id="questionBox1">
+                         <input type="text" aria-label="question1" class="form-control" name="questions">
                          <div class="col-xs-2">
  
                          </div>
                      </div>
  
-                     <div class="form-group">
-                         <label for="questionTextField">Question <%=count %></label>
-                         <input type="text" class="form-control" id="questionTextField"
-                             placeholder="Enter the First Question" name="questions" value=""
-                             >
-                     </div>
- 
-                     <!-- If multiple choice question is selected, then show this div -->
-                     <div id="choiceContainer">
-                         <div id="multipleChoice" class="group">
-                             <!-- Gonna prompt the user for the choices -->
-                             <p>You have decided to make a this multiple choice question.</p>
-                             <label>Please enter the choices: </label>
-                             <div class="input-group">
-                                 <div class="input-group-prepend">
-                                     <div class="input-group-text">
-                                         <input type="radio" aria-label="Radio button for following text input" readonly>
-                                     </div>
-                                 </div>
-                                 <input id="choiceOne" type="text" name="choiceOne" class="form-control"
-                                     placeholder="Please enter choice one" required>
-                             </div>
- 
-                             <div class="input-group">
-                                 <div class="input-group-prepend">
-                                     <div class="input-group-text">
-                                         <input type="radio" aria-label="Radio button for following text input" readonly>
-                                     </div>
-                                 </div>
-                                 <input id="choiceTwo" type="text" name="choiceTwo" class="form-control"
-                                     placeholder="Please enter choice two" required>
-                             </div>
- 
-                             <div class="input-group">
-                                 <div class="input-group-prepend">
-                                     <div class="input-group-text">
-                                         <input type="radio" aria-label="Radio button for following text input" readonly>
-                                     </div>
-                                 </div>
-                                 <input id="choiceThree" type="text" name="choiceThree" class="form-control"
-                                     placeholder="Please enter choice three" required>
-                             </div>
- 
-                             <div class="input-group">
-                                 <div class="input-group-prepend">
-                                     <div class="input-group-text">
-                                         <input type="radio" aria-label="Radio button for following text input" readonly>
-                                     </div>
-                                 </div>
-                                 <input id="choiceFour" type="text" name="choiceFour" class="form-control"
-                                     placeholder="Please enter choice four" required>
-                             </div>
-                         </div>
- 
-                         <!-- If  agree or disagree question is selected, then show this div -->
-                         <div id="agreeOrDisagree" class="group">
-                             <!-- For this question type, the user does not have to add choices -->
-                             <p>You have decided to make this an Agree or Disagree question.</p>
-                         </div>
- 
-                         <!-- If short answers question is selected, then show this div -->
-                         <div id="shortAnswer" class="group">
-                             <!-- For this question type, the user does not have to add choices -->
-                             <p>You have decided to make this a Short Answer question.</p>
-                         </div>
-                     </div>
-                 </div>
+                
  
                  <div class="form-group" id="questionarray">
  
@@ -147,85 +81,41 @@ Add view
  
  </div>
  
- <div class="form-group">
-     <label for="questionTextField">Question <%=count %></label>
-     <input type="text" class="form-control" id="questionTextField"
-         placeholder="Enter the First Question" name="questions" value=""
-         >
- </div>
- 
+
  
  <script>
- 
+ let count = 2;
      function addEntry() {
          
          console.log("YOU CLICKED ME!");
+
+
+
          
+         let type = document.getElementById("selection");
+         selection = type.value;
+         if (selection==2){
          let element = document.getElementById('questionarray');
          let div = element.appendChild(document.createElement('div'));
-         div.innerHTML = "<label for=\"questionTextField\">Question <%=count %></label><input type=\"text\" \
-         class=\"form-control\" id=\"questionTextField\" placeholder=\"Enter the <%=count %> Question\" name=\"questions\" value=\"\">"
-         //div.classList.add("form-group");
-         //let label = div.appendChild(document.createElement('label'));
-         //label.innerHTML = "Question<%=count%>";
+         div.innerHTML = "<label for=\"questionTextField\">Question "+count+"</label><input type=\"text\" \
+         class=\"form-control\" id=\"questionTextField\" placeholder=\"Enter the "+count+" Question\" name=\"questions\" value=\"\">"
+         }
+         else if (selection == 1)
+         {
+            let element = document.getElementById('questionarray');
+         let div = element.appendChild(document.createElement('div'));
+         div.innerHTML = "<label for=\"questionTextField\">Question "+count+"</label><input type=\"radio\" \
+         class=\"form-control\" id=\"questionTextField\" placeholder=\"Enter the "+count+" Question\" name=\"questions\" value=\"\">"
+         }
+         {console.log("NOT!")}
+         count++;
          
-         //let input = div.appendChild(document.createElement('input'))
-         //input.setAttribute("type","text");
-         //let list = element.appendChild(document.createElement('ul'));
-         //let item = list.appendChild(document.createElement('li'));
-         //let link = item.appendChild(document.createElement('a'));
- 
-         //link.href = 'https://example.com/';
-         //link.textContent = 'Hello, world';
      }
  </script>
  
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
- <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
+
  
- <script type="text/javascript">
-     $(document).ready(function () {
-         $('.group').hide();
-         $('#inputGroupSelect01').change(
-             function () {
-                 $('.group').hide();
-                 $('#' + $(this).val()).show();
-             })
-         $("input[placeholder]").each(
-             function () {
-                 $(this).attr('size', $(this).attr('placeholder').length);
-             });
- 
-         var q = 2;
-         $('#add').click(function () {
-             $("#questionarray").append('<div class="form-group"><label id="questiontest"></label>')
-             $("#questionBox1").clone().attr('id', 'questionBox' + q).appendTo("#questionarray");
-             $("#choiceContainer").clone().attr('id', 'choiceContainer' + q).appendTo("#questionarray");
- 
- 
-             $("#questionBox" + q).children("div").children("#inputGroupSelect01").attr('id', "inputGroupSelect" + q);
-             document.getElementById("questiontest").innerHTML = "Question " + q;
-             document.getElementById("questiontest").setAttribute('id', 'questiontest' + q);
- 
-             $("#choiceContainer" + q).children("div").attr('class', 'group' + q);
-             $('#questionarray').append('</div>')
- 
-             var qq = q;
-             $('#inputGroupSelect' + q).change(
-                 function () {
-                     var test = "#inputGroupSelect" + qq;
-                     $('.group' + qq).hide();
-                     $('#choiceContainer' + qq).children("#" + $(test).val()).show();
-                 })
-             $("input[placeholder]").each(
-                 function () {
-                     $(this).attr('size', $(this).attr('placeholder').length);
-                 });
- 
-             q++;
-         });
-     });
- </script>
+
  
  <%- include ../partials/bottom_nav.ejs %>
  
