--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -88,7 +88,7 @@ Add view
      function addEntry() {
          
          console.log("YOU CLICKED ME!");
-
+         document.getElementById("selection").disabled = true;
 
 
          
