--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -44,11 +44,57 @@ Answer a survey view
                         readonly>
                 </div>
 
-                <div class="form-group">
-                    <label for="answerTextField">Answer <%=count +1%></label>
-                    <input type="text" class="form-control" id="AnswerTextField" placeholder="Please enter a response"
-                        name="answers" value="" required>
-                </div>
+                    <% if(survey.type == 'Multiple Choice') { %>
+                        <% let counter=count+1 %>
+                        <div class="form-group">
+                        <label for="answerTextField">Answer <%=count +1%></label>
+                        <div id="AnswerTextField">
+                            <div class="input-group">
+                                    <div class="input-group-prepend">
+                                      <div class="input-group-text">
+                                        <input type="radio" aria-label="Radio button for following text input" name="group<%=count+1 %>">
+                                      </div>
+                                    </div>
+                                    <input id="choiceOne" type="text" name="choices" class="form-control" value="<%= survey.choices[(counter*4)-4] %>" readonly>
+                                </div>      
+                                
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                      <div class="input-group-text">
+                                        <input type="radio" aria-label="Radio button for following text input" name="group<%=count+1 %>">
+                                      </div>
+                                    </div>
+                                    <input id="choiceTwo" type="text" name="choices" class="form-control" value="<%= survey.choices[(counter*4)-3] %>" readonly>
+                                </div>
+    
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                      <div class="input-group-text">
+                                        <input type="radio" aria-label="Radio button for following text input" name="group<%=count+1 %>">
+                                      </div>
+                                    </div>
+                                    <input id="choiceThree" type="text" name="choices" class="form-control" value="<%= survey.choices[(counter*4)-2] %>" readonly>
+                                </div>
+    
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                      <div class="input-group-text">
+                                        <input type="radio" aria-label="Radio button for following text input" name="group<%=count+1 %>">
+                                      </div>
+                                    </div>
+                                    <input id="choiceFour" type="text" name="choices" class="form-control" value="<%= survey.choices[counter*4-1] %>" readonly>
+                                </div>                                              
+                            </div>
+                        </div>
+                    <% } %>
+                    <% if(survey.type == 'Short Answer') { %>
+                        <div class="form-group">
+                            <label for="answerTextField">Answer <%=count +1%></label>
+                            <input type="text" class="form-control" id="AnswerTextField" placeholder="Please enter a response"
+                                name="answers" value="" required>
+                        </div>
+                    <% } %>
+                
                 <% } %>
 
                 <%    var today = new Date();
