fixed short answer type questions functionality

--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -57,7 +57,7 @@ Add view
                      <label for="questionn">Question 1</label>
                      <div class="form-group" id="questionn">                   
                         <div id="questionBox1" class="questionBox">                        
-                            <input type="text" aria-label="First name" name="questions" class="form-control" placeholder="Please enter question here">
+                            <input type="text" aria-label="First name" name="questions" class="form-control" placeholder="Please enter question here" required>
                             <br>
                          </div>
                          
@@ -72,7 +72,7 @@ Add view
                                         <input type="radio" aria-label="Radio button for following text input" disabled>
                                       </div>
                                     </div>
-                                    <input id="choiceOne" type="text" name="choices" class="form-control" placeholder="Please enter choice one" required>
+                                    <input id="choiceOne" type="text" name="choices" class="form-control" placeholder="Please enter choice one">
                                 </div>      
                                 
                                 <div class="input-group">
@@ -81,7 +81,7 @@ Add view
                                         <input type="radio" aria-label="Radio button for following text input" disabled>
                                       </div>
                                     </div>
-                                    <input id="choiceTwo" type="text" name="choices" class="form-control" placeholder="Please enter choice two" required>
+                                    <input id="choiceTwo" type="text" name="choices" class="form-control" placeholder="Please enter choice two">
                                 </div>
     
                                 <div class="input-group">
@@ -90,7 +90,7 @@ Add view
                                         <input type="radio" aria-label="Radio button for following text input" disabled>
                                       </div>
                                     </div>
-                                    <input id="choiceThree" type="text" name="choices" class="form-control" placeholder="Please enter choice three"required>
+                                    <input id="choiceThree" type="text" name="choices" class="form-control" placeholder="Please enter choice three">
                                 </div>
     
                                 <div class="input-group">
@@ -99,7 +99,7 @@ Add view
                                         <input type="radio" aria-label="Radio button for following text input" disabled>
                                       </div>
                                     </div>
-                                    <input id="choiceFour" type="text" name="choices" class="form-control" placeholder="Please enter choice four" required>
+                                    <input id="choiceFour" type="text" name="choices" class="form-control" placeholder="Please enter choice four">
                                 </div>                                              
                             </div>
     
