--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -40,7 +40,13 @@ Add view
                      name="description" required>
                  </div>                
                                         
-                  
+                 <div class="form-group">
+                    <label for="surveyDescTextField">Creator</label>
+                    <input type="text" class="form-control"
+                    id="surveyCreator"
+                    placeholder="Enter Survey Description"
+                    name="creator" required>
+                </div>               
 
 
 
