fix for Mixed Content Issue

--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -128,7 +128,7 @@ Answer a survey view
     </div>
 </div>
 
-<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+<script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
         
 <script type="text/javascript">
 $(document).ready(function(){
