--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -137,8 +137,7 @@ Add view
          
      </div>
      
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-     <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
+     <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
     
      <script type="text/javascript">
      $(document).ready(function(){
