--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -116,7 +116,7 @@ Edit a survey view
 
 
                 
-            <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+            <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
 
 
               
