changed a label in Edit Page

--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -61,7 +61,7 @@ Edit a survey view
                         <% if(survey.type == 'Multiple Choice') { %>
                             <% let counter=count+1 %>
                             <div class="form-group">
-                            <label for="answerTextField">Answer <%=count +1%></label>
+                            <label for="answerTextField">Choices:</label>
                             <div id="AnswerTextField">
                                 <div class="input-group">
                                         <div class="input-group-prepend">
